syntax = "proto3";
option java_multiple_files = true;
package br.com.mmgabri.grpc.autorizador;

import "comuns/Header.proto";

service AutorizadorService {
    rpc AutorizarTransacao (AutorizadorRequest) returns (AutorizadorResponse);
}

message AutorizadorRequest {
    br.com.mmgabri.grpc.comuns.Header header = 1;
    string de02 = 2;
    string de03 = 3;
    string de04 = 4;
    string de07 = 5;
    string de12 = 6;
    string de18 = 7;
    string de22 = 8;
    string de43 = 9;
    string de49 = 10;
    string de52 = 11;
    string de55 = 12;
    string de63 = 13;
    string customReturnSeguranca = 14;
    string customReturnLimitePortador = 15;
    string customReturnLimite = 16;
    string customReturnLancamentoConta = 17;
    string customReturnFraude = 18;
}

message AutorizadorResponse {
    br.com.mmgabri.grpc.comuns.Header header = 1;
        string de02 = 2;
        string de03 = 3;
        string de04 = 4;
        string de07 = 5;
        string de12 = 6;
        string de18 = 7;
        string de22 = 8;
        string de39 = 9;
        string de43 = 10;
        string de49 = 11;
        string de55 = 12;
        string de63 = 13;
}